 - fixed bug on time input when you clicked away from hour or minute
 it gets zeroed
 - minute field on time input no longer focuses out when you fill the two
 fields

 v1.0.3
  - added more initial form fields: Bedrijfsnaam Voornaam Tussenvoegsels Achternaam E-mail Telefoonnummer
  - position numbers from form fields and locations start from 1 now

 v1.0.4
  - on backend edit event, added a checkbox on location, to use the date time or to insert a custom
  time

 v1.0.5
  - on backend edit event, on form fields, added drag and drop functionality and removed
  position field, now position is managed by drag and drop

 v1.0.6
  - on backend edit event, on locations, added drag and drop functionality and remooved
  position field, now position is managed by drag and drop

v1.0.7
  - Modified initial form field E-mail with E-mailadres and modified all the server side checks
  to match the email field change.
  - Removed check for same email subscriptions, now multiple subscriptions with the same email
  are allowed

v1.0.8
  - On the single event page, on the message modal, made the cancel button to point to the subscription form
  - On the single event page, on the message modal, added another button to point to the home page
  - On the single event page, on the message modal, modified the cancel button, to show the modal form with empty fields when error

v1.0.9
  - Register subscription timestamp on subscribtion
  - On edit event page, on subscription list, made the table responsive
  - On edit event page, on subscription list, edit the table to show the subscribed at and deleted at fields
  - made the sidebar smaller
  - On edit event page, on subscription list, edit the table to show the fields as inline block
  - Added a helper class with a random string generator function

v1.1.0
  - Added API Endpoint for admin to unsubscribe a subscription
  - Added unsubscribe email template to manage the email template when a user gets unsubscribed from the admin page