@@ -47,3 +47,5 @@ v1.0.9
 v1.1.0
   - Added API Endpoint for admin to unsubscribe a subscription
   - Added unsubscribe email template to manage the email template when a user gets unsubscribed from the admin page
+  - Now the admin/unsubscribe API Endpoint sends a notification to the user if specified in the POST data as notify: truthy value
+  - Added %event_link% in the unsubscribe email template
